vbnc/vbnc/tests/Errors/30002-1.vb
Public Class A
    Public Class B
    End Class

    Function F() As A.C
    End Function
End Class